<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:contentDescription="@string/imageDesc"
                android:id="@+id/iv_avatar"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_item_username"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:gravity="start"
                    android:text="@string/username"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            <ImageView
                android:id="@+id/ic_fav"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/ic_fav"
                app:srcCompat="@drawable/ic_favorite_selected" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>